--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -13,6 +13,9 @@
         "matches": ["<all_urls>"],
         "js": ["content_scripts/main.js"]
       }
-    ]
+    ],
+    "options_ui": {
+        "page": "options/options.html"
+    }
   }
   
