Align author and version info in crate and manifest

--- a/extension/vizsla/Cargo.toml
+++ b/extension/vizsla/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "vizsla"
 version = "0.1.0"
-authors = ["Chris Clarizio christopher.a.clarizio@gmail.com"]
+authors = ["Chris Clarizio <christopher.a.clarizio@gmail.com>"]
 description = ""
 license = "MIT/Apache-2.0"
 repository = "https://github.com/christopherclarizio/vizsla"
