Add non-functional makefile and manifest setup

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -11,7 +11,10 @@
     "content_scripts": [
       {
         "matches": ["<all_urls>"],
-        "js": ["content_scripts/main.js"]
+        "js": [
+          "content_scripts/main.js",
+          "content_scripts/vizsla.js"
+        ]
       }
     ],
     "options_ui": {
