Revert "Add non-functional makefile and manifest setup"
This reverts commit e940901d3c0e6f49c70c8abb12eeccb2bb7ccdc6.

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -11,10 +11,7 @@
     "content_scripts": [
       {
         "matches": ["<all_urls>"],
-        "js": [
-          "content_scripts/main.js",
-          "content_scripts/vizsla.js"
-        ]
+        "js": ["content_scripts/main.js"]
       }
     ],
     "options_ui": {
