--- a/extension/vizsla/Cargo.toml
+++ b/extension/vizsla/Cargo.toml
@@ -10,5 +10,15 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib"]
 
-[dependencies]
-wasm-bindgen = "0.2"
+[dependencies.wasm-bindgen]
+version = "0.2"
+
+[dependencies.web-sys]
+version = "0.3.4"
+features = [
+  'Document',
+  'Element',
+  'HtmlElement',
+  'Node',
+  'Window',
+]
