--- a/extension/vizsla/Cargo.toml
+++ b/extension/vizsla/Cargo.toml
@@ -16,6 +16,7 @@ version = "0.2"
 [dependencies.web-sys]
 version = "0.3.4"
 features = [
+  'CssStyleDeclaration',
   'Document',
   'Element',
   'HtmlElement',
