Add keydown event handler

--- a/vizsla/Cargo.toml
+++ b/vizsla/Cargo.toml
@@ -19,7 +19,7 @@ features = [
   'CssStyleDeclaration',
   'Document',
   'Element',
-  'Event',
+  'KeyboardEvent',
   'HtmlElement',
   'Node',
   'Window',
